# oracle_import_tool

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  USER_GUIDE.md  check_data.py  config_example.ini  pyproject.toml  requirements.txt  setup_env.bat  setup_env.sh
ddl/: TM_MOUNTER.sql  TM_MOUNTER_TYPE.sql  TM_ROLL.sql  TM_ROLL_MNG.sql  TM_STORAGE.sql  TM_WORKER.sql  TO_PICKING_SMT.sql  T_ORDER.sql  T_PROCESS.sql  T_SMT_NG.sql  T_SMT_PROCESS.sql  T_SMT_ROLL.sql  T_SMT_USER.sql
oracle_import_tool/: __init__.py  main.py
oracle_import_tool/config/: config_manager.py
oracle_import_tool/core/: __init__.py  importer.py  table_creator.py
oracle_import_tool/data/: file_reader.py
oracle_import_tool/database/: connection.py
oracle_import_tool/utils/: datetime_parser.py  header_detector.py  progress_manager.py
tests/: README.md  conftest.py  run_tests.py  test_basic.py  test_config_manager.py  test_config_only.py  test_file_reader.py  test_importer.py  test_integration.py  test_table_creator.py
